--- a/projet/index.html
+++ b/projet/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates magnam facere enim blanditiis maxime, quis velit distinctio tempora suscipit! Dolore placeat soluta ea veniam dolorum quia et consectetur animi mollitia?</p>
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates magnam
+      facere enim blanditiis maxime, quis velit distinctio tempora suscipit!
+      Dolore placeat soluta ea veniam dolorum quia et consectetur animi
+      mollitia?
+    </p>
+
+    <h1>This is a test</h1>
+  </body>
 </html>
